
bin_PROGRAMS = mpiSORT
noinst_HEADERS = $(HDR)

mpiSORT_SOURCES = $(SRC)

SRC = mpiSort.c mpiSortUtils.c mergeSort.c parallelBitonicSort.c \
	parallelBitonicSort2.c parallelBitonicSort3.c qkSort.c parser.c \
	tokenizer.c preWrite.c write.c  writeUtils.c sortAnyDim.c

HDR = mpiSortUtils.h mergeSort.h parallelBitonicSort.h \
	parallelBitonicSort2.h parallelBitonicSort3.h qkSort.h \
	parser.h tokenizer.h preWrite.h write.h writeUtils.h \
	bgzf.c bgzf.h khash.h sortAnyDim.h \
	compat.h
